[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Potato.gd" type="Script" id=1]
[ext_resource path="res://Assets/potato-2.png" type="Texture" id=2]
[ext_resource path="res://Assets/potato-3.png" type="Texture" id=3]
[ext_resource path="res://Assets/potato-1.png" type="Texture" id=4]
[ext_resource path="res://Assets/shadow.png" type="Texture" id=5]

[sub_resource type="Shader" id=7]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 shine_color : hint_color = vec4(1.0);
uniform float shine_speed : hint_range(0.0, 10.0, 0.1) = 1.0;
uniform float shine_size : hint_range(0.01, 1.0, 0.01) = 0.01;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	float shine = step(1.0 - shine_size * 0.5, 0.5 + 0.5 * sin(UV.x - UV.y + TIME * shine_speed));
	COLOR.rgb = mix(COLOR.rgb, shine_color.rgb, shine * shine_color.a);
}"

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = SubResource( 7 )
shader_param/shine_color = Color( 1, 1, 1, 1 )
shader_param/shine_speed = 0.0
shader_param/shine_size = 0.01

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24.5, 25 )

[node name="Potato" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
material = SubResource( 8 )
position = Vector2( 0, 14 )
frames = SubResource( 4 )
offset = Vector2( 0, -14.831 )

[node name="GrowthTick" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UntilAppear" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, 16 )
shape = SubResource( 6 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.054902 )
position = Vector2( 0, 12 )
scale = Vector2( 1.8125, 3 )
texture = ExtResource( 5 )

[connection signal="timeout" from="GrowthTick" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="UntilAppear" to="." method="_on_UntilAppear_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
